--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
+cmake==4.0.3
 colorama==0.4.6
 contourpy==1.3.0
 cryptography==43.0.3
@@ -55,10 +56,9 @@ Mako==1.3.8
 MarkupSafe==2.1.5
 matplotlib==3.9.4
 msgspec==0.19.0
-my-module==1.6.2
 mysql-connector-python==9.2.0
 mysqlclient==2.2.7
-numpy==1.26.1           # ✅ Compatible with Python 3.11
+numpy==1.26.1
 opencv-python==4.11.0.86
 oscrypto==1.3.0
 packaging==24.2
@@ -90,7 +90,7 @@ reportlab==4.2.0
 requests==2.32.3
 schema==0.7.7
 scikit-learn==1.5.2
-scipy==1.13.1           # ✅ Prebuilt wheel available for Python 3.11
+scipy==1.13.1
 six==1.17.0
 SQLAlchemy==2.0.37
 sqlparse==0.5.3
