--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,8 @@ matplotlib==3.9.4
 msgspec==0.19.0
 mysql-connector-python==9.2.0
 mysqlclient==2.2.7
-numpy==1.26.1
+# 🔧 FIXED VERSION
+numpy==1.26.4
 opencv-python==4.11.0.86
 oscrypto==1.3.0
 packaging==24.2
@@ -111,4 +112,3 @@ WTForms==3.2.1
 xhtml2pdf==0.2.16
 zipp==3.21.0
 zopfli==0.2.3.post1
-
