--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,30 @@
-# Core frameworks
+africastalking==1.2.9
+aiosqlite==0.20.0
+alembic==1.14.1
+arabic-reshaper==3.0.0
+argon2-cffi-bindings==25.1.0
+asgiref==3.8.1
+asn1crypto==1.5.1
+bcrypt==4.2.1
+blinker==1.9.0
+Brotli==1.1.0
+cachelib==0.13.0
+cairocffi==1.7.1
+certifi==2024.12.14
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+cmake==4.0.3
+colorama==0.4.6
+contourpy==1.3.0
+cryptography==43.0.3
+cssselect2==0.7.0
+cycler==0.12.1
+Cython==3.0.11
+Django==4.2.18
+dnspython==2.7.0
+email_validator==2.2.0
 Flask==3.1.2
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
@@ -9,115 +35,81 @@ Flask-MySQLdb==2.0.0
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
-gunicorn==22.0.0
-Werkzeug==3.1.3
-Jinja2==3.1.4
-itsdangerous==2.2.0
-
-# Database + ORM
-SQLAlchemy==2.0.37
-alembic==1.14.1
-mysqlclient==2.2.7
-PyMySQL==1.1.1
-mysql-connector-python==9.2.0
-tortoise-orm==0.23.0
-pypika-tortoise==0.3.2
-psycopg2-binary==2.9.9
-psycopg2==2.9.10
-
-# Security & Encryption
-bcrypt==4.2.1
-argon2-cffi-bindings==25.1.0
-cryptography==43.0.3
-oscrypto==1.3.0
-passlib==1.7.4
-
-# Data Science & Math
-numpy==1.26.4
-scipy==1.13.1
-pandas==2.2.3
-scikit-learn==1.5.2
-joblib==1.4.2
-threadpoolctl==3.5.0
-
-# Plotting & Visualization
-matplotlib==3.9.4
-cycler==0.12.1
-kiwisolver==1.4.7
 fonttools==4.55.8
-contourpy==1.3.0
-
-# Web, APIs & Requests
-requests==2.32.3
-urllib3==2.3.0
-idna==3.10
-charset-normalizer==3.4.1
-chardet==5.2.0
-certifi==2024.12.14
-dnspython==2.7.0
-schema==0.7.7
-
-# File & PDF tools
-reportlab==4.2.0
-xhtml2pdf==0.2.16
-pdfkit==1.0.0
-pypdf==5.1.0
-weasyprint==64.0
-svglib==1.5.1
-arabic-reshaper==3.0.0
-python-bidi==0.6.3
-pyphen==0.17.2
-pydyf==0.11.0
-tinycss2==1.4.0
-cssselect2==0.7.0
-tinyhtml5==2.0.0
-zopfli==0.2.3.post1
-
-# Text & Document
-python-docx==1.1.0
-PyYAML==6.0.2
-lxml==5.3.0
-MarkupSafe==2.1.5
-
-# Geolocation
-geopy==2.4.1
+fpdf==1.7.2
 geographiclib==2.0
+geopy==2.4.1
+greenlet==3.1.1
+gunicorn==22.0.0
 haversine==2.9.0
-
-# QR & Misc Tools
-qrcode==8.0
-peewee==3.17.8
-pony==0.7.19
-msgspec==0.19.0
-
-# Async / Utils
-aiosqlite==0.20.0
-asgiref==3.8.1
-typing_extensions==4.12.2
+html5lib==1.1
+idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.5.2
-tzlocal==5.2
-tzdata==2024.2
 iso8601==2.1.0
-packaging==24.2
-colorama==0.4.6
-cachelib==0.13.0
-
-# External Services
-africastalking==1.2.9
-
-# Other dependencies
-pypdf==5.1.0
-Cython==3.0.11
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.7
+lxml==5.3.0
 Mako==1.3.8
-Brotli==1.1.0
-Django==4.2.18  # optional, only if you’re mixing Django features
-
-# Video/Camera tools
+MarkupSafe==2.1.5
+matplotlib==3.9.4
+msgspec==0.19.0
+mysql-connector-python==9.2.0
+mysqlclient==2.2.7
+# ✅ Pre-built wheel compatible with Python 3.11
+numpy==1.25.2
+# ✅ Pre-built wheel compatible with Python 3.11
+scipy==1.10.1
 opencv-python==4.11.0.86
+oscrypto==1.3.0
+packaging==24.2
+pandas==2.2.3
+passlib==1.7.4
+pdfkit==1.0.0
+peewee==3.17.8
+pickle-mixin==1.0.2
 pillow==11.1.0
-
-# Compression & Encoding
-webencodings==0.5.1
+pony==0.7.19
+psycopg2==2.9.10
+psycopg2-binary==2.9.9
+pycparser==2.22
+pydyf==0.11.0
+pyHanko==0.25.3
+pyhanko-certvalidator==0.26.5
+PyMySQL==1.1.1
+pyparsing==3.2.1
+pypdf==5.1.0
+pyphen==0.17.2
+pypika-tortoise==0.3.2
+python-bidi==0.6.3
+python-dateutil==2.9.0.post0
+python-docx==1.1.0
+pytz==2024.2
+PyYAML==6.0.2
+qrcode==8.0
+reportlab==4.2.0
+requests==2.32.3
+schema==0.7.7
+scikit-learn==1.5.2
 six==1.17.0
+SQLAlchemy==2.0.37
+sqlparse==0.5.3
+svglib==1.5.1
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+tortoise-orm==0.23.0
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+uritools==4.0.3
+urllib3==2.3.0
+weasyprint==64.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+WTForms==3.2.1
+xhtml2pdf==0.2.16
 zipp==3.21.0
+zopfli==0.2.3.post1
