--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: smartclassroommanagamentsystem
     env: python
     region: frankfurt  # or oregon, singapore, etc.
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
     plan: free
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: FLASK_ENV
         value: production
