--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ msgspec==0.19.0
 mysql-connector-python==9.2.0
 mysqlclient==2.2.7
 numpy==1.26.4
+scipy==1.12.1   # ✅ Prebuilt wheel, avoids gfortran issues
 opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
@@ -75,7 +76,6 @@ qrcode==8.0
 reportlab==4.2.0
 requests==2.32.3
 scikit-learn==1.5.2
-scipy==1.13.1
 six==1.17.0
 SQLAlchemy==2.0.37
 sqlparse==0.5.3
