--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,12 @@ services:
   - type: web
     name: smartclassroommanagamentsystem
     env: python
-    region: frankfurt  # or oregon, singapore, etc.
+    region: frankfurt
     plan: free
     buildCommand: |
-      pip install --upgrade pip
+      pip install --upgrade pip setuptools wheel
       pip install -r requirements.txt
-      # Run database migrations if using Flask-Migrate
-      flask db upgrade
+      flask db upgrade   # Runs migrations automatically
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: FLASK_ENV
@@ -17,6 +16,3 @@ services:
         generateValue: true
       - key: DATABASE_URL
         value: mysql+pymysql://<DB_USER>:<DB_PASSWORD>@<DB_HOST>:<DB_PORT>/<DB_NAME>
-      # Optional PostgreSQL example:
-      # - key: DATABASE_URL
-      #   value: postgresql://<DB_USER>:<DB_PASSWORD>@<DB_HOST>:<DB_PORT>/<DB_NAME>
