--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ qrcode==8.0
 reportlab==4.2.0
 requests==2.32.3
 scikit-learn==1.5.2
+scipy==1.14.1
 six==1.17.0
 SQLAlchemy==2.0.37
 sqlparse==0.5.3
@@ -91,3 +92,4 @@ Werkzeug==3.1.3
 WTForms==3.2.1
 xhtml2pdf==0.2.16
 zipp==3.21.0
+
