--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,93 @@
 africastalking==1.2.9
 aiosqlite==0.20.0
-alembic==1.14.1
+alembic==1.12.1
 arabic-reshaper==3.0.0
-argon2-cffi-bindings==25.1.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.8.1
 asn1crypto==1.5.1
-bcrypt==4.2.1
-blinker==1.9.0
-Brotli==1.1.0
-cachelib==0.13.0
-cairocffi==1.7.1
-certifi==2024.12.14
-cffi==1.17.1
+bcrypt==4.1.2
+blinker==1.6.3
+Brotli==1.0.9
+cachelib==0.9.0
+cairocffi==1.5.0
+certifi==2023.7.22
+cffi==1.15.1
 chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-cryptography==43.0.3
+cryptography==41.0.7
 cssselect2==0.7.0
 cycler==0.12.1
-Cython==3.0.11
-Django==4.2.18
-email_validator==2.2.0
-Flask==3.1.2
+Cython==3.0.8
+Django==4.2.7
+email_validator==2.1.0.post1
+Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
-Flask-Migrate==4.1.0
+Flask-Migrate==4.0.5
 Flask-MySQL==1.6.0
 Flask-MySQLdb==2.0.0
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
+Flask-WTF==1.2.1
 fpdf==1.7.2
 geographiclib==2.0
 geopy==2.4.1
-greenlet==3.1.1
-gunicorn==22.0.0
+greenlet==2.0.2
+gunicorn==21.2.0
 haversine==2.9.0
 html5lib==1.1
-idna==3.10
-importlib_metadata==8.5.0
+idna==3.6
+importlib_metadata==6.8.0
 iso8601==2.1.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-joblib==1.4.2
-kiwisolver==1.4.7
-lxml==5.3.0
-MarkupSafe==2.1.5
-matplotlib==3.9.4
-msgspec==0.19.0
-mysql-connector-python==9.2.0
-mysqlclient==2.2.7
-numpy==1.26.4
-scipy==1.12.1   # ✅ Prebuilt wheel, avoids gfortran issues
-opencv-python==4.11.0.86
-packaging==24.2
-pandas==2.2.3
+itsdangerous==2.1.2
+Jinja2==3.1.3
+joblib==1.3.2
+kiwisolver==1.4.5
+lxml==4.9.3
+MarkupSafe==2.1.3
+matplotlib==3.7.3
+msgspec==0.18.6
+mysql-connector-python==8.2.0
+mysqlclient==2.2.0
+numpy==1.23.5   # ✅ Works with Python 3.9
+scipy==1.10.1   # ✅ No compiler issues, supports 3.9
+opencv-python==4.8.1.78
+packaging==23.2
+pandas==2.1.4
 passlib==1.7.4
 pdfkit==1.0.0
-peewee==3.17.8
-pillow==11.1.0
-pony==0.7.19
+peewee==3.17.5
+pillow==10.0.1
+pony==0.7.16
 psycopg2-binary==2.9.9
-pycparser==2.22
-PyMySQL==1.1.1
-pyparsing==3.2.1
-pypdf==5.1.0
-python-bidi==0.6.3
-python-dateutil==2.9.0.post0
-python-docx==1.1.0
-pytz==2024.2
-PyYAML==6.0.2
-qrcode==8.0
-reportlab==4.2.0
-requests==2.32.3
-scikit-learn==1.5.2
-scipy==1.14.1
-six==1.17.0
-SQLAlchemy==2.0.37
-sqlparse==0.5.3
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tortoise-orm==0.23.0
-typing_extensions==4.12.2
-tzdata==2024.2
+pycparser==2.21
+PyMySQL==1.1.0
+pyparsing==3.1.1
+pypdf==3.17.4
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-docx==0.8.11
+pytz==2023.3
+PyYAML==6.0.1
+qrcode==7.4.2
+reportlab==4.0.9
+requests==2.31.0
+scikit-learn==1.3.2   # ✅ Works with numpy 1.23.x
+six==1.16.0
+SQLAlchemy==2.0.23
+sqlparse==0.5.0
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+tortoise-orm==0.19.3
+typing_extensions==4.8.0
+tzdata==2023.3
 tzlocal==5.2
-urllib3==2.3.0
-weasyprint==64.0
-Werkzeug==3.1.3
-WTForms==3.2.1
-xhtml2pdf==0.2.16
-zipp==3.21.0
-
+urllib3==2.1.0
+weasyprint==59.0
+Werkzeug==3.0.1
+WTForms==3.1.2
+xhtml2pdf==0.2.11
+zipp==3.17.0
