--- a/requirements.txt
+++ b/requirements.txt
@@ -3,91 +3,90 @@ aiosqlite==0.20.0
 alembic==1.12.1
 arabic-reshaper==3.0.0
 argon2-cffi-bindings==21.2.0
-asgiref==3.8.1
+asgiref==3.7.2
 asn1crypto==1.5.1
 bcrypt==4.1.2
-blinker==1.6.3
-Brotli==1.0.9
-cachelib==0.9.0
-cairocffi==1.5.0
-certifi==2023.7.22
-cffi==1.15.1
+blinker==1.7.0
+Brotli==1.1.0
+cachelib==0.13.0
+cairocffi==1.6.0
+certifi==2024.8.30
+cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-cryptography==41.0.7
+cryptography==42.0.5
 cssselect2==0.7.0
 cycler==0.12.1
-Cython==3.0.8
 Django==4.2.7
 email_validator==2.1.0.post1
-Flask==3.0.3
+Flask==3.1.0
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-MySQL==1.6.0
-Flask-MySQLdb==2.0.0
+Flask-MySQLdb==1.0.1
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 fpdf==1.7.2
 geographiclib==2.0
 geopy==2.4.1
-greenlet==2.0.2
+greenlet==3.0.3
 gunicorn==21.2.0
 haversine==2.9.0
 html5lib==1.1
 idna==3.6
 importlib_metadata==6.8.0
 iso8601==2.1.0
-itsdangerous==2.1.2
+itsdangerous==2.2.0
 Jinja2==3.1.3
 joblib==1.3.2
 kiwisolver==1.4.5
 lxml==4.9.3
 MarkupSafe==2.1.3
 matplotlib==3.7.3
-msgspec==0.18.6
-mysql-connector-python==8.2.0
-mysqlclient==2.2.0
-numpy==1.23.5   # ✅ Works with Python 3.9
-scipy==1.10.1   # ✅ No compiler issues, supports 3.9
+msgspec==0.19.0
+mysql-connector-python==8.3.0
+mysqlclient==2.1.1
+numpy==1.26.2
 opencv-python==4.8.1.78
 packaging==23.2
-pandas==2.1.4
+pandas==2.1.2
 passlib==1.7.4
 pdfkit==1.0.0
-peewee==3.17.5
-pillow==10.0.1
-pony==0.7.16
+peewee==3.17.6
+pillow==10.1.0
+pony==0.7.19
 psycopg2-binary==2.9.9
 pycparser==2.21
 PyMySQL==1.1.0
 pyparsing==3.1.1
 pypdf==3.17.4
 python-bidi==0.4.2
-python-dateutil==2.8.2
-python-docx==0.8.11
-pytz==2023.3
+python-dateutil==2.9.0.post0
+python-docx==1.1.0
+pytz==2023.3.post1
 PyYAML==6.0.1
 qrcode==7.4.2
-reportlab==4.0.9
+reportlab==4.1.0
 requests==2.31.0
-scikit-learn==1.3.2   # ✅ Works with numpy 1.23.x
+scikit-learn==1.3.2
+scipy==1.12.0
 six==1.16.0
 SQLAlchemy==2.0.23
-sqlparse==0.5.0
+sqlparse==0.4.4
 threadpoolctl==3.2.0
 tinycss2==1.2.1
-tortoise-orm==0.19.3
-typing_extensions==4.8.0
+tortoise-orm==0.20.0
+typing_extensions==4.9.0
 tzdata==2023.3
 tzlocal==5.2
-urllib3==2.1.0
-weasyprint==59.0
+urllib3==2.2.0
+weasyprint==61.2
 Werkzeug==3.0.1
-WTForms==3.1.2
+WTForms==3.1.1
 xhtml2pdf==0.2.11
 zipp==3.17.0
